Update  daimont movil

--- a/index.html
+++ b/index.html
@@ -26,12 +26,7 @@
 <body>
   <!-- Fondo con video diamante -->
   <div class="bg-video" aria-hidden="true">
-    <video id="bgVideo"
-      autoplay
-      muted
-      loop
-      playsinline
-      preload="auto"
+    <video id="bgVideo" autoplay muted loop playsinline preload="auto"
       poster="assets/images/gallery/poster_diamante.jpg">
       <source src="assets/images/gallery/video_diamante3_1.mp4" type="video/mp4" />
       Tu navegador no soporta videos en HTML5.
