--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -17,6 +17,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body class="contacto-page">
+      <!-- Fondo con video diamante -->
+<div class="bg-video" aria-hidden="true">
+    <video id="bgVideo" autoplay muted loop playsinline preload="auto"
+      poster="../assets/images/gallery/poster_diamante.jpg">
+      <source src="../assets/images/gallery/video_diamante4.mp4" type="video/mp4" />
+      Tu navegador no soporta videos en HTML5.
+    </video>
+    <div class="bg-vignette"></div>
+    <div class="bg-shine"></div>
+  </div>
     <!-- HEADER Y NAVEGACIÓN -->
    <header class="header">
     <div class="header-container">
@@ -43,16 +53,6 @@
     </div>
 </header>
 
-    <!-- BREADCRUMB -->
-    <section class="breadcrumb-section">
-        <div class="container">
-            <div class="breadcrumb">
-                <a href="../index.html">Inicio</a>
-                <span class="breadcrumb-separator"><i class="fas fa-chevron-right"></i></span>
-                <span class="breadcrumb-current">Contacto</span>
-            </div>
-        </div>
-    </section>
 
     <!-- HERO CONTACTO -->
     <section class="page-hero">
