update datos y contacto

--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Servicios - Smile Luxury Studio</title>
+    <title>Servicios - Diamonds Smile</title>
     <meta name="description" content="Conoce todos nuestros servicios dentales: estética dental, implantes, ortodoncia, odontología general y más. Tecnología de vanguardia.">
     
     <!-- Estilos CSS -->
@@ -30,7 +30,7 @@
     <!-- HEADER Y NAVEGACIÓN -->
    <header class="header">
     <div class="header-container">
-        <a href="../index.html" class="logo">Smile Luxury Studio</a>
+        <a href="../index.html" class="logo">Diamonds Smile</a>
         
      <nav class="nav">
     <ul class="nav-links">
@@ -439,56 +439,70 @@
     </section>
 
     <!-- FOOTER -->
-    <footer class="footer">
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-section">
-                    <h3><i class="fas fa-tooth"></i> Smile Luxury Studio</h3>
-                    <p>Tu clínica dental de confianza donde la excelencia y el lujo se encuentran para crear sonrisas perfectas.</p>
-                    <div class="social-links">
-                        <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
-                        <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                        <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                        <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
-                    </div>
-                </div>
-                <div class="footer-section">
-                    <h4>Servicios</h4>
-                    <ul>
-                        <li><a href="#general">Odontología General</a></li>
-                        <li><a href="#estetica">Estética Dental</a></li>
-                        <li><a href="#ortodoncia">Ortodoncia</a></li>
-                        <li><a href="#implantes">Implantología</a></li>
-                    </ul>
-                </div>
-                <div class="footer-section">
-                    <h4>Navegación</h4>
-                    <ul>
-                        <li><a href="../index.html#nosotros">Sobre nosotros</a></li>
-                        <li><a href="equipo.html">Nuestro equipo</a></li>
-                        <li><a href="../index.html#testimonios">Testimonios</a></li>
-                        <li><a href="contacto.html">Contacto</a></li>
-                    </ul>
-                </div>
-                <div class="footer-section">
-                    <h4>Contacto</h4>
-                    <div class="contact-info">
-                        <p><i class="fas fa-map-marker-alt"></i> Av. Luxury 123, Piso 5<br>Ciudad Premium, CP 12345</p>
-                        <p><i class="fas fa-phone"></i> +1 (555) 123-4567</p>
-                        <p><i class="fas fa-envelope"></i> info@smileluxurystudio.com</p>
-                        <p><i class="fas fa-clock"></i> Lun-Vie: 8AM-7PM | Sáb: 9AM-4PM</p>
-                    </div>
-                </div>
-            </div>
-            <div class="footer-bottom">
-                <p>&copy; 2024 Smile Luxury Studio. Todos los derechos reservados.</p>
-                <div class="footer-links">
-                    <a href="#">Términos y Condiciones</a>
-                    <a href="#">Política de Privacidad</a>
-                </div>
-            </div>
+  <footer class="footer" role="contentinfo">
+    <div class="container">
+      <div class="footer-content">
+        <div class="footer-section">
+          <h3><i class="fas fa-tooth" aria-hidden="true"></i> Diamonds Smile</h3>
+          <p>Tu clínica dental de confianza donde la excelencia y el lujo se encuentran para crear sonrisas perfectas.</p>
+          <div class="social-links">
+            <div class="social-links">
+                <a href="https://facebook.com/smileluxurystudio" aria-label="Facebook">
+                  <i class="fab fa-facebook"></i>
+                </a>
+                <a href="https://www.instagram.com/dradianamunoz?igsh=MXZhOTlvbXQ4YzF5bA==" aria-label="Instagram">
+                  <i class="fab fa-instagram"></i>
+                </a>
+                <a href="https://wa.me/573168866812?text=Hola,%20me%20interesa%20información%20sobre%20sus%20servicios%20dentales" aria-label="WhatsApp">
+                  <i class="fab fa-whatsapp"></i>
+                </a>
+                <a href="https://tiktok.com/@dradianamunoz" aria-label="TikTok">
+                  <i class="fab fa-tiktok"></i>
+                </a>
+              </div>
+          </div>
         </div>
-    </footer>
+
+        <div class="footer-section">
+          <h4>Servicios</h4>
+          <ul>
+            <li><a href="pages/servicios.html#general">Odontología General</a></li>
+            <li><a href="pages/servicios.html#estetica">Estética Dental</a></li>
+            <li><a href="pages/servicios.html#ortodoncia">Ortodoncia</a></li>
+            <li><a href="pages/servicios.html#implantes">Implantología</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-section">
+          <h4>Navegación</h4>
+          <ul>
+            <li><a href="#nosotros">Sobre nosotros</a></li>
+            <li><a href="pages/equipo.html">Nuestro equipo</a></li>
+            <li><a href="#testimonios">Testimonios</a></li>
+            <li><a href="pages/contacto.html">Contacto</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-section">
+          <h4>Contacto</h4>
+          <div class="contact-info">
+           <p><i class="fas fa-map-marker-alt"></i> Carrera 55 # 9-88 Camino Real<br>Cali-Colombia</p>
+            <p><i class="fas fa-phone"></i> +57 (316) 886-6812</p>
+            <p><i class="fas fa-envelope"></i> dra.patriciamunozop@gmail.com</p>
+            <p><i class="fas fa-clock"></i> Lun-Vie: 8AM-6PM </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="footer-bottom">
+        <p>&copy; 2024 Diamonds Smile. Todos los derechos reservados.</p>
+        <div class="footer-links">
+          <a href="#">Términos y Condiciones</a>
+          <a href="#">Política de Privacidad</a>
+        </div>
+      </div>
+    </div>
+  </footer>
 
     <!-- JavaScript -->
     <script src="../assets/js/main.js"></script>
