--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Servicios - Diamonds Smile</title>
+    <title>Servicios - Diamond Smiles</title>
     <meta name="description" content="Conoce todos nuestros servicios dentales: estética dental, implantes, ortodoncia, odontología general y más. Tecnología de vanguardia.">
     
     <!-- Estilos CSS -->
@@ -30,7 +30,7 @@
     <!-- HEADER Y NAVEGACIÓN -->
    <header class="header">
     <div class="header-container">
-        <a href="../index.html" class="logo">Diamonds Smile</a>
+        <a href="../index.html" class="logo">Diamond Smiles</a>
         
      <nav class="nav">
     <ul class="nav-links">
@@ -443,7 +443,7 @@
     <div class="container">
       <div class="footer-content">
         <div class="footer-section">
-          <h3><i class="fas fa-tooth" aria-hidden="true"></i> Diamonds Smile</h3>
+          <h3><i class="fas fa-tooth" aria-hidden="true"></i> Diamond Smiles</h3>
           <p>Tu clínica dental de confianza donde la excelencia y el lujo se encuentran para crear sonrisas perfectas.</p>
           <div class="social-links">
             <div class="social-links">
@@ -495,7 +495,7 @@
       </div>
 
       <div class="footer-bottom">
-        <p>&copy; 2024 Diamonds Smile. Todos los derechos reservados.</p>
+        <p>&copy; 2025 Diamond Smiles. Todos los derechos reservados.</p>
         <div class="footer-links">
           <a href="#">Términos y Condiciones</a>
           <a href="#">Política de Privacidad</a>
