--- a/index.html
+++ b/index.html
@@ -704,7 +704,7 @@
                 <i class="fas fa-tooth"></i>
             </div>
             <div class="chatbot-info">
-                <h3>Dra. Patricia Muñoz</h3>
+                <h3>Dra. Diana Patricia Muñoz</h3>
                 <div class="chatbot-status">
                     <div class="status-dot"></div>
                     <span>En línea</span>
@@ -743,27 +743,13 @@
                 </button>
             </div>
             <div class="footer-text">
-                🦷 Smile Luxury Studio
+                🦷 Diamond Smiles
             </div>
         </div>
     </div>
 </div>
 
-        <!-- Footer -->
-        <div class="chatbot-footer">
-            <div class="action-buttons">
-                <button class="action-btn primary" onclick="openContactForm()">
-                    <i class="fas fa-calendar-alt"></i>
-                    Agendar Cita
-                </button>
-                <button class="action-btn secondary" onclick="openWhatsApp()">
-                    <i class="fab fa-whatsapp"></i>
-                    WhatsApp
-                </button>
-            </div>
-            <div class="footer-text">
-                🦷 Smile Luxury Studio - Tu sonrisa perfecta
-            </div>
+        
         </div>
     </div>
 </div>
