--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -438,7 +438,8 @@
         </div>
     </section>
 
-    <div class="dental-chatbot" id="dentalChatbot">
+   <!-- CHATBOT -->
+  <div class="dental-chatbot" id="dentalChatbot">
     <!-- Botón flotante compacto -->
     <button class="chatbot-toggle" id="chatbotToggle" aria-label="Abrir chat">
         <i class="fas fa-comments"></i>
@@ -454,7 +455,7 @@
                 <i class="fas fa-tooth"></i>
             </div>
             <div class="chatbot-info">
-                <h3>Dra. Patricia Muñoz</h3>
+                <h3>Dra. Diana Patricia Muñoz</h3>
                 <div class="chatbot-status">
                     <div class="status-dot"></div>
                     <span>En línea</span>
@@ -493,7 +494,7 @@
                 </button>
             </div>
             <div class="footer-text">
-                🦷 Smile Luxury Studio
+                🦷 Diamond Smiles
             </div>
         </div>
     </div>
