arreglos diseño  contactos

--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -67,7 +67,7 @@
     <!-- SERVICIOS CON PRECIOS -->
 <section class="additional-services" style="padding-block:32px;">
   <div class="container">
-    <h2 class="section-title" style="margin-bottom:16px;">Servicios con Precios</h2>
+    <h2 class="section-title" style="margin-bottom:16px;">Servicios Diamond</h2>
 
     <!-- Un solo grid, sin height fijo -->
     <div class="services-grid"
@@ -83,7 +83,7 @@
         <div class="premium-badge"><i class="fas fa-crown"></i> Exclusivo</div>
         <div class="service-icon"><i class="fas fa-gem"></i></div>
 
-        <h3>💎 Diamond Smiles Exclusive</h3>
+        <h3>Diamond Smiles Exclusive</h3>
         <h4 class="subtitle">Diseño de Sonrisa en Resina Impresa</h4>
 
         <p class="lead">
@@ -106,7 +106,7 @@
       <!-- Valoración Odontológica -->
       <div class="service-card">
         <div class="service-icon"><i class="fas fa-search"></i></div>
-        <h3>🦷 Valoración Odontológica</h3>
+        <h3> Valoración Odontológica</h3>
         <p>Realizamos una valoración integral que une salud bucal y estética, ofreciendo soluciones personalizadas y tratamientos precisos.¡Tu sonrisa merece lo mejor! </p>
         <ul class="service-list" style="margin:0 0 12px 1.2rem;">
           <li>Evaluación completa</li>
@@ -121,7 +121,7 @@
       <!-- Limpieza Dental Profunda -->
       <div class="service-card">
         <div class="service-icon"><i class="fas fa-smile"></i></div>
-        <h3>🦷 Limpieza Dental Profunda</h3>
+        <h3>Limpieza Dental Profunda</h3>
         <p>Nuestra limpieza dental profunda con scaler elimina eficazmente la placa blanda y calcificada, tanto encima como debajo de la línea de las encías</p>
         <ul class="service-list" style="margin:0 0 12px 1.2rem;">
           <li>Scaler ultrasónico</li>
@@ -136,7 +136,7 @@
       <!-- Diseño de Sonrisa -->
       <div class="service-card featured">
         <div class="service-icon"><i class="fas fa-smile-beam"></i></div>
-        <h3>🌟 Diseño de Sonrisa</h3>
+        <h3> Diseño de Sonrisa</h3>
         <p>Transforma tu sonrisa con nuestro servicio personalizado en resina o cerámica</p>
         <ul class="service-list" style="margin:0 0 12px 1.2rem;">
           <li>Diseño personalizado</li>
@@ -151,7 +151,7 @@
       <!-- Rehabilitación Oral -->
       <div class="service-card">
         <div class="service-icon"><i class="fas fa-tools"></i></div>
-        <h3>🦷 Rehabilitación Oral</h3>
+        <h3> Rehabilitación Oral</h3>
         <p>En nuestro consultorio, la rehabilitación oral restaura la funcionalidad y estética dental</p>
         <ul class="service-list" style="margin:0 0 12px 1.2rem;">
           <li>Tratamiento integral</li>
@@ -165,7 +165,7 @@
        <!-- Diseño de Sonrisa Resina Impresa -->
 <div class="service-card">
   <div class="service-icon"><i class="fas fa-cubes"></i></div>
-  <h3>🦷 Diseño de Sonrisa Resina Impresa</h3>
+  <h3>Diseño de Sonrisa Resina Impresa</h3>
   <p>
     ¡Renueva tu sonrisa con carillas en resinas impresas! Diseñadas a la medida para lograr
     un acabado natural, estético y duradero. Transforma tu sonrisa de manera rápida y precisa
@@ -186,7 +186,7 @@
       <!-- Manejo de Bruxismo TTM -->
       <div class="service-card">
         <div class="service-icon"><i class="fas fa-shield-alt"></i></div>
-        <h3>🦷 Manejo de Bruxismo TTM</h3>
+        <h3> Manejo de Bruxismo TTM</h3>
         <p>¡Recupera el equilibrio y bienestar de tu mandíbula!</p>
         <ul class="service-list" style="margin:0 0 12px 1.2rem;">
           <li>Diagnóstico preciso</li>
