--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
           <p>Tu clínica dental de confianza donde la excelencia y el lujo se encuentran para crear sonrisas perfectas.</p>
           <div class="social-links">
             <div class="social-links">
-                <a href="https://facebook.com/smileluxurystudio" aria-label="Facebook">
+                <a href="https://www.facebook.com/share/14RPoEaz1yd/" aria-label="Facebook">
                   <i class="fab fa-facebook"></i>
                 </a>
                 <a href="https://www.instagram.com/dradianamunoz?igsh=MXZhOTlvbXQ4YzF5bA==" aria-label="Instagram">
