--- a/pages/carillas-diamond.html
+++ b/pages/carillas-diamond.html
@@ -425,7 +425,7 @@
                     <h3><i class="fas fa-gem" aria-hidden="true"></i> Diamond Smiles Exclusive</h3>
                     <p>Donde la perfección y el lujo se encuentran para crear sonrisas extraordinarias que brillan como diamantes auténticos.</p>
                     <div class="social-links">
-                        <a href="https://facebook.com/smileluxurystudio" aria-label="Facebook">
+                        <a href="https://www.facebook.com/share/14RPoEaz1yd/" aria-label="Facebook">
                             <i class="fab fa-facebook"></i>
                         </a>
                         <a href="https://www.instagram.com/dradianamunoz?igsh=MXZhOTlvbXQ4YzF5bA==" aria-label="Instagram">
