--- a/pages/equipo.html
+++ b/pages/equipo.html
@@ -177,7 +177,7 @@
             <div class="ph">WL</div>
           </div>
           <div class="member-body">
-            <h3 class="member-name">Willy Llamos</h3>
+            <h3 class="member-name">Willy Llanos</h3>
             <p class="member-role">Técnico Dental Auxiliar</p>
             <div class="member-tags">
               <span class="tag">Impresión 3D</span>
